--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@
 
 // Import sematic
 @import '~semantic-ui-css/semantic.min.css';
+@import '~antd/dist/antd.css';
 // Import Main styles for this application
 @import './scss/style.scss';
 
