--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -9,7 +9,10 @@
   z-index: 2000;
 }
 
-
+.breadcrumb{
+  margin-bottom: 0;
+  border: none;
+}
 .sidebar {
   background: #328dd1
 }
@@ -30,6 +33,15 @@
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 11 14'%3E%3Cpath fill='%23fff' d='M9.148 2.352l-4.148 4.148 4.148 4.148q0.148 0.148 0.148 0.352t-0.148 0.352l-1.297 1.297q-0.148 0.148-0.352 0.148t-0.352-0.148l-5.797-5.797q-0.148-0.148-0.148-0.352t0.148-0.352l5.797-5.797q0.148-0.148 0.352-0.148t0.352 0.148l1.297 1.297q0.148 0.148 0.148 0.352t-0.148 0.352z'/%3E%3C/svg%3E")
   }
 
+.logo{
+  height: 100%;
+  width:100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position-x: left;
+  background-position-y: center;
+  background-image: url('../assets/img/brand/logo.svg');
+}
 .ui.attached.header {
   background-color: #2185d0;
   color:white
@@ -38,7 +50,27 @@
 //Stretch datepicker fullwidth
 .customDatePickerWidth,
 .customDatePickerWidth > div.react-datepicker-wrapper,
-.customDatePickerWidth > div > div.react-datepicker__input-container
-.customDatePickerWidth > div > div.react-datepicker__input-container input {
+.customDatePickerWidth > div > div.react-datepicker__input-container,
+.customDatePickerWidth > div > div.react-datepicker__input-container > input {
   width: 100%;
+}
+
+.dmcit-sub-header{
+  font-weight: 500;
+  margin-bottom: 0.5em;
+  font-size: 1.3125rem;
+}
+
+.ant-form-item{
+  margin-bottom: 0;
+}
+
+.ant-layout-header{
+  height: 50px;
+  line-height: 50px;
+  background: #1890ff;
+}
+
+.ant-layout-header .ant-btn-link{
+  color: white;
 }
